
[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python>=0.15.0",
    "Cython>=3.1.0",
    "setuptools_scm[toml]>=6.2",
    "numpy>=2.0.0rc1",
]

[project]
name = 'geoana'
dynamic = ["version"]
description = 'Analytic expressions for geophysical responses'
readme = 'README.rst'
requires-python = '>=3.11'
authors = [
  {name = 'SimPEG developers', email = 'lindseyheagy@gmail.com'},
]
keywords = [
    'geophysics', 'electromagnetics', 'gravity', 'magnetics'
]

# Note: Python and NumPy upper version bounds should be set correctly in
# release branches, see:
#     https://scipy.github.io/devdocs/dev/core-dev/index.html#version-ranges-for-numpy-and-other-dependencies
dependencies = [
    "numpy>=1.22.4",
    "scipy>=1.12",
    "libdlf",
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Cython',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Physics',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Natural Language :: English',
]

[project.license]
file = 'LICENSE'

[project.optional-dependencies]
plot = ["matplotlib"]
extras = ["utm"]
jittable = ["numba"]
all = ["geoana[plot,extras,jittable]"]
doc = [
    "sphinx==8.1.3",
    "pydata-sphinx-theme==0.16.1",
    "sphinx-gallery==0.19.0",
    "numpydoc==1.9.0",
    "jupyter",
    "graphviz",
    "pillow",
    "geoana[all]",
]
test = [
    "pytest",
    "pytest-cov",
    "sympy",
    "discretize",
    "geoana[doc,all]",
]
build = [
    "meson-python>=0.15.0",
    "meson",
    "ninja",
    "numpy>=2.0.0rc1",
    "cython>=3.1.0",
    "setuptools_scm",
]

[project.urls]
Homepage = 'https://simpeg.xyz'
Documentation = 'https://geoana.simpeg.xyz'
Repository = 'https://github.com/simpeg/geoana.git'

[tool.setuptools_scm]

[tool.cibuildwheel]
# skip building wheels for python 3.6, 3.7, all pypy versions, and specialty linux
# processors (still does arm builds though).
skip = "cp38-* cp39-* cp310-* *_ppc64le *_i686 *_s390x *-win32 cp310-win_arm64"
build-verbosity = 3
enable = ["cpython-freethreading"]

# test importing geoana to make sure externals are loadable.
test-command = 'python -c "import geoana; geoana.show_config()"'

[tool.cibuildwheel.config-settings]
setup-args = '-Dwith_extensions=true'

# use the visual studio compilers
[tool.cibuildwheel.windows.config-settings]
setup-args = [
    '-Dwith_extensions=true',
    '--vsenv'
]

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:divide by zero encountered in divide:RuntimeWarning',
    'ignore:invalid value encountered in divide:RuntimeWarning',
    'ignore:invalid value encountered in multiply:RuntimeWarning',
    'ignore:invalid value encountered in sqrt:RuntimeWarning',
    'ignore::numpy.exceptions.ComplexWarning'
]



[tool.coverage.run]
branch = true
source = ["geoana"]
# plugins = [
#     "Cython.Coverage",
# ]

[tool.coverage.report]
ignore_errors = false
show_missing = true
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "AbstractMethodError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

